--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "namaste-react",
   "version": "1.0.0",
   "description": "This is Namaste React by Harshit",
-  "main": "app.js",
+  
   "scripts": {
+    "start":"parcel index.html",
+    "build": "parcel build index.html",
     "test": "jest"
+    
   },
   "repository": {
     "type": "git",
