--- a/package.json
+++ b/package.json
@@ -2,12 +2,10 @@
   "name": "namaste-react",
   "version": "1.0.0",
   "description": "This is Namaste React by Harshit",
-  
   "scripts": {
-    "start":"parcel index.html",
+    "start": "parcel index.html",
     "build": "parcel build index.html",
     "test": "jest"
-    
   },
   "repository": {
     "type": "git",
@@ -26,9 +24,10 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.2"
   },
-  "browserslist":[
+  "browserslist": [
     "last 2 versions"
   ]
 }
